--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,12 @@ body {
 
 #title {
     width:15%;
-    border:2px solid black;
-    border-radius: 5px;
     text-align: center;
     margin-top: 30px;
-    margin-left:5em;
+    font-size: 3em;
+    color: #fff;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    
 }
 
 #main {
@@ -67,6 +68,7 @@ h3 {
     border-radius: 35px;
     margin-top: 35px;
     margin-left: 32%;
+    box-shadow: -1px 3px 12px 7px rgba(0,0,0,0.48);
 }
 
 .top-row {
@@ -113,4 +115,19 @@ h3 {
 
 .col {
     margin-left: 5%;
+}
+
+.col2 {
+    margin-right: 5%;
+}
+
+
+
+
+
+.flexContainer {
+    width: 50%;
+    display: flex;
+    margin-left: 24%;
+    border-radius: 2em;
 }
